[PMSH] Read all subscriptions API
Issue-ID: DCAEGEN2-2847
