# components/pm-subscription-handler/pmsh_service/mod/api/pmsh_swagger.yml
@@ -72,9 +72,24 @@ paths:
         400:
           description: Invalid input
 
+    get:
+      description: Get all the subscriptions from PMSH.
+      operationId: mod.api.controller.get_subscriptions
+      tags:
+        - "Subscription"
+      responses:
+        200:
+          description: OK; Array of subscriptions are returned else empty if not found
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/subscription"
+        500:
+          description: Exception occurred while querying database
+
   /subscription/{subscription_name}:
     get:
-      description: Get the Subscription from ONAP specified by Name
+      description: Get the Subscription from PMSH specified by Name
       operationId: mod.api.controller.get_subscription_by_name
       tags:
         - "Subscription"
@@ -92,7 +107,7 @@ paths:
         404:
           description: Subscription with specified name not found
         500:
-          description: Exception occurs while querying database
+          description: Exception occurred while querying database
 
 definitions:
   subscription:
